tests/baselines/reference/parserVariableDeclaration5.errors.txt
==== tests/cases/compiler/parserVariableDeclaration5.ts (1 errors) ====
    var a,
         ~
!!! parserVariableDeclaration5.ts(1,6): error TS1009: Trailing separator not allowed.